apps/services/media/prowlarr/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-internal
  labels:
    app: prowlarr
  annotations:
    kube-vip.io/vipHost: prowlarr
spec:
  ports:
  - name: web
    port: 80
    targetPort: 9696
    protocol: TCP
  selector:
    app: prowlarr
  type: LoadBalancer
  loadBalancerIP: "192.168.1.144"
  loadBalancerClass: kube-vip.io/kube-vip-class
