apps/services/media/prowlarr/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prowlarr.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr-internal
            port:
              name: web
  tls:
  - hosts:
    - prowlarr.gruber.dev.br
    secretName: prowlarr-tls
